// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users delete should delete an user 1`] = `
Array [
  RowDataPacket {
    "password": "test",
    "token": "token_two",
    "userId": "1fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "username": "two",
  },
]
`;

exports[`Users findAll should return all users 1`] = `
Array [
  RowDataPacket {
    "userId": "010c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "username": "one",
  },
  RowDataPacket {
    "userId": "1fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "username": "two",
  },
]
`;

exports[`Users findByIdAndUpdate should update an user safely 1`] = `
Array [
  RowDataPacket {
    "password": "test",
    "token": "token_one",
    "userId": "010c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "username": "username",
  },
  RowDataPacket {
    "password": "test",
    "token": "token_two",
    "userId": "1fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "username": "two",
  },
]
`;

exports[`Users save should save a new user 1`] = `
Object {
  "password": "sdfsdfsdfsdfsdf",
  "token": "fghjkhjkhjhk",
  "userId": StringMatching /\\[a-fA-F0-9-\\]\\{36\\}/,
  "username": "testsave",
}
`;
